--- a/KimChristineLab02.html
+++ b/KimChristineLab02.html
@@ -1,40 +1,72 @@
+<html>
+<head>
 <title>Christine Kim</title>
-<h1>chrxstiine@gmail.com | 225-290-0621</h1>
-<h2>Summary</h2>
+<style>
+body {
+  background-color: lightgrey;
+}
+h2{color: green;}
+h3{color: blue;}
+h4{color: purple;}
+p.light {
+  font-weight: lighter;
+}
+
+p.thick {
+  font-weight: bold;
+    background-color: antiquewhite; 
+}
+
+p.thicker {
+  font-weight: 900;
+background-color: antiquewhite; 
+}
+</style>
+    </head>
+<body>
+<h1>Christine Kim</h1>
+<h2>chrxstiine@gmail.com | 225-290-0621</h2>
+<h3>Summary</h3>
 College student who plans to attend law school. Eager to apply communication and social skills and able to adapt to new environments quickly. Efficient working alone and with teams.
-<h2>Experience</h2>
-<ul><b>JOA HOME CARE INC/Asian Community Services (start-up companies) | May 2022-August 2022</b>
-● Created and wrote website content for ACS
-● Researched similar non-profit organizations and data to create reliable
-information
-● Made charts, graphs, forms, and paperwork through Google Docs for JOA
-● Became familiarized and efficient working with technology and independently
-<b>The Donut Shack | Roswell, GA | April 2022-August 2022</b>
-● Managed the cash register and distribution of all donuts/made drinks
-● Kept an organized and clean storefront, including tables, chairs, displays,
-front desk, etc.
-● Engaged with customers in greeting/small talk and managed all phone calls
-and online orders
-<b>Ensemble Boutique | Suwanee, GA | Oct 2020-Mar 2021</b>
-● Engaged with customers with greetings/conversations and gave recommendations
-● Restocked new inventory, managed dressing rooms and cash register
-● Maintained knowledge of current promotions, exchange guidelines, payment
-policies
-● Answered incoming phone calls to provide store, products and services
-information
-<b>American Eagle Outfitters, Inc | Buford, GA | Oct 2019-Feb 2020</b>
-● Operated/managed the cash register, restock, and dressing rooms
-● Greeted guests with a smile and engaged in conversation- helped to find
-items
-● Organized tables, hangers, and kept the general store presentation pristine
-● Collaborated with co-workers and also worked independently in assigned
-sections </ul>
-<h2>Education</h2>
-<b>Bachelor of Fine Arts</b>: Creative Writing
-Emerson College | Boston, MA | Expected in May 2025 | 3.9 GPA <b>High School Diploma</b>
+<h3>Experience</h3>
+
+<!--Check how to format lists. Remove the bullet marks.-->
+
+<p class="thicker">JOA HOME CARE INC/Asian Community Services (start-up companies) | May 2022-August 2022</p>
+<ul><li>Created and wrote website content for ACS</li>
+<li> Researched similar non-profit organizations and data to create reliable
+information</li>
+<li> Made charts, graphs, forms, and paperwork through Google Docs for JOA</li>
+<li> Became familiarized and efficient working with technology and independently</li></ul>
+<br><h4><b>The Donut Shack | Roswell, GA | April 2022-August 2022</b></h4>
+    <ul><li> Managed the cash register and distribution of all donuts/made drinks</li>
+<li> Kept an organized and clean storefront, including tables, chairs, displays,
+front desk, etc.</li>
+<li> Engaged with customers in greeting/small talk and managed all phone calls
+    and online orders</li></ul>
+<br><h4><b>Ensemble Boutique | Suwanee, GA | Oct 2020-Mar 2021</b></h4>
+    <ul><li> Engaged with customers with greetings/conversations and gave recommendations</li>
+<li> Restocked new inventory, managed dressing rooms and cash register</li>
+<li> Maintained knowledge of current promotions, exchange guidelines, payment
+policies</li>
+<li> Answered incoming phone calls to provide store, products and services
+    information</li></ul>
+<br><h4><b>American Eagle Outfitters, Inc | Buford, GA | Oct 2019-Feb 2020</b></h4>
+<ul><li>Operated/managed the cash register, restock, and dressing rooms</li>
+<li> Greeted guests with a smile and engaged in conversation- helped to find
+items</li>
+<li>Organized tables, hangers, and kept the general store presentation pristine</li>
+<li>Collaborated with co-workers and also worked independently in assigned
+    sections </li></ul>
+<br><h3>Education</h3>
+<br><b>Bachelor of Fine Arts</b>: Creative Writing
+Emerson College | Boston, MA | Expected in May 2025 | 3.9 GPA 
+<br><b>High School Diploma</b>
 North Gwinnett High School | Suwanee, GA | May 2021 | 3.9 GPA
-<ul><h2>Skills</h2>
-● Bilingual in English and Korean
-● Teamwork and collaboration experience
-● Effective communicator
-● Reliable and punctual </ul>
+<p class="thick">Skills</p>
+<ul><li> Bilingual in English and Korean</li>
+<li> Teamwork and collaboration experience</li>
+<li> Effective communicator</li>
+<li> Reliable and punctual</li></ul>
+</body>
+</html>
