--- a/index.html
+++ b/index.html
@@ -1,28 +1,8 @@
 <html>
 <head>
 <title>Christine Kim</title>
-<style>
-body {
-  background-color: lightgrey;
-}
-h2{color: green;}
-h3{color: blue;}
-h4{color: purple;}
-p.light {
-  font-weight: lighter;
-}
-
-p.thick {
-  font-weight: bold;
-    background-color: antiquewhite; 
-}
-
-p.thicker {
-  font-weight: 900;
-background-color: antiquewhite; 
-}
-</style>
-    </head>
+<link rel="stylesheet" type="text/css" href="stylesheet.css">
+</head>
 <body>
 <h1>Christine Kim</h1>
 <h2>chrxstiine@gmail.com | 225-290-0621</h2>
