--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ College student who plans to attend law school. Eager to apply communication and
 
 <!--Check how to format lists. Remove the bullet marks.-->
 
-<p class="thicker">JOA HOME CARE INC/Asian Community Services (start-up companies) | May 2022-August 2022</p>
+<p class="thick">JOA HOME CARE INC/Asian Community Services (start-up companies) | May 2022-August 2022</p>
 <ul><li>Created and wrote website content for ACS</li>
 <li> Researched similar non-profit organizations and data to create reliable
 information</li>
