--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@ College student who plans to attend law school. Eager to apply communication and
 information</li>
 <li> Made charts, graphs, forms, and paperwork through Google Docs for JOA</li>
 <li> Became familiarized and efficient working with technology and independently</li></ul>
-<br><h4><b>The Donut Shack | Roswell, GA | April 2022-August 2022</b></h4>
+    <p class="thick">The Donut Shack | Roswell, GA | April 2022-August 2022</p>
     <ul><li> Managed the cash register and distribution of all donuts/made drinks</li>
 <li> Kept an organized and clean storefront, including tables, chairs, displays,
 front desk, etc.</li>
 <li> Engaged with customers in greeting/small talk and managed all phone calls
     and online orders</li></ul>
-<br><h4><b>Ensemble Boutique | Suwanee, GA | Oct 2020-Mar 2021</b></h4>
+<p class="thick">Ensemble Boutique | Suwanee, GA | Oct 2020-Mar 2021</p>
     <ul><li> Engaged with customers with greetings/conversations and gave recommendations</li>
 <li> Restocked new inventory, managed dressing rooms and cash register</li>
 <li> Maintained knowledge of current promotions, exchange guidelines, payment
 policies</li>
 <li> Answered incoming phone calls to provide store, products and services
     information</li></ul>
-<br><h4><b>American Eagle Outfitters, Inc | Buford, GA | Oct 2019-Feb 2020</b></h4>
+    <p class="thick">American Eagle Outfitters, Inc | Buford, GA | Oct 2019-Feb 2020</p>
 <ul><li>Operated/managed the cash register, restock, and dressing rooms</li>
 <li> Greeted guests with a smile and engaged in conversation- helped to find
 items</li>
