--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <body>
 <h1>Christine Kim</h1>
 <h2>chrxstiine@gmail.com | 225-290-0621</h2>
-<h3>Summary</h3>
+    <p class="thicker">Summary</p>
 College student who plans to attend law school. Eager to apply communication and social skills and able to adapt to new environments quickly. Efficient working alone and with teams.
-<h3>Experience</h3>
+    <p class="thicker">Experience</p>
 <p class="thick">JOA HOME CARE INC/Asian Community Services (start-up companies) | May 2022-August 2022</p>
 <ul><li>Created and wrote website content for ACS</li>
 <li> Researched similar non-profit organizations and data to create reliable
@@ -35,12 +35,12 @@ items</li>
 <li>Organized tables, hangers, and kept the general store presentation pristine</li>
 <li>Collaborated with co-workers and also worked independently in assigned
     sections </li></ul>
-<br><h3>Education</h3>
+    <p class="thicker">Education</p>
 <br><b>Bachelor of Fine Arts</b>: Creative Writing
 Emerson College | Boston, MA | Expected in May 2025 | 3.9 GPA 
 <br><b>High School Diploma</b>
 North Gwinnett High School | Suwanee, GA | May 2021 | 3.9 GPA
-<p class="thick">Skills</p>
+<p class="thicker">Skills</p>
 <ul><li> Bilingual in English and Korean</li>
 <li> Teamwork and collaboration experience</li>
 <li> Effective communicator</li>
